--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -9,7 +9,7 @@
     <!-- menu -->
     <div class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item" routerLink="Savings">Savings Account</a>
+        <a class="navbar-item" routerLink="Shirt">Shirt Tracker</a>
         <a class="navbar-item" routerLink="History">History</a>
         <a class="navbar-item" routerLink="Summary">Summary</a>
       </div>
